--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,19 @@
-div {
-    background-color: #c8d5b9;
+.topDiv {
+    background-color: #e0ece4;
 }
+
+.midDiv {
+    background-color: #8fc0a9;
+    width: 200px;
+    height: 200px;
+}
+
+.botDiv {
+    background-color: #68b0ab;
+    width: 200px;
+    height: 200px;
+}
+
 body {
     margin: 0px ;
 }
