--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0px ;
+}
+h1 {
+    margin-top: 0px ;
+}
+
 .topDiv {
     background-color: #e0ece4;
 }
@@ -14,9 +21,6 @@
     height: 200px;
 }
 
-body {
-    margin: 0px ;
-}
-h1 {
-    margin-top: 0px ;
+.coder {
+    text-decoration: underline;
 }
