--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 body {
     margin: 0px ;
+    text-align: center;
 }
 h1 {
-    margin-top: 0px ;
+    width: 20% ;
+    margin: 0 auto 0 auto;
 }
 
 .topDiv {
@@ -13,12 +15,20 @@ h1 {
     background-color: #8fc0a9;
     width: 200px;
     height: 200px;
+    display: inline-block;
+    position: relative;
+    left: 410px ;
+    bottom: 0px;
 }
 
 .botDiv {
     background-color: #68b0ab;
     width: 200px;
     height: 200px;
+    /*position: relative;
+    left: 200px ;
+    bottom: 200px;*/
+    display: inline-block;
 }
 
 .coder {
